--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 
-    <title>lemoni | ALAZEM</title>
+    <title>lemoni</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="N Fit"/>
+    <meta name="description" content="Lemoni"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta property="og:locale" content="en_US"/>
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://keenthemes.com/metronic"/>
     <meta property="og:site_name" content="Metronic by Keenthemes"/>
     <link rel="canonical" href="http://preview.keenthemes.comindex.html"/>
-    <link rel="shortcut icon" href="../assets/media/logos/favicon.ico"/>
+    <link rel="shortcut icon" href="../assets/media/logos/icon.png"/>
 
     <link rel="stylesheet" href="../assets/css/App.css"/>
 
